# hdu-library-seat-booking

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py
app/models/: __init__.py  plan.py
app/services/: __init__.py  auth_service.py  base.py  booking_service.py  notification_service.py  plan_repository.py  plan_service.py
app/strategies/: __init__.py  fixed_seat.py  random_range.py  weekday_rotation.py
app/ui/: __init__.py  cli.py  terminal.py
app/utils/: __init__.py  logger.py
core/: __init__.py  api.py  auth.py  config.py  config_parser.py  constants.py  exceptions.py  metrics.py  password_auth.py  room_cache.py  settings.py  utils.py
core/domain/: __init__.py  booking_result.py  time.py
core/infrastructure/: __init__.py  http_transport.py  library_gateway.py  protocols.py  session_auth.py  user_info.py
core/observability/: __init__.py  metrics.py
core/resilience/: __init__.py  auth_refresher.py  cancellation.py  circuit_breaker.py  timeout.py
docs/: core.md  requirements.md
plans/: wobbly-mixing-lobster.md
src/hdu_library_booking/: __init__.py  auth.py  constants.py  exceptions.py  types.py
src/hdu_library_booking/api/: __init__.py  client.py  password_auth.py  room_cache.py
src/hdu_library_booking/cli/: __init__.py  helpers.py  terminal.py
src/hdu_library_booking/config/: __init__.py  parser.py  settings.py  yaml.py
src/hdu_library_booking/gateways/: __init__.py  http_transport.py  library.py  protocols.py  session_auth.py  user_info.py
src/hdu_library_booking/models/: __init__.py  booking_result.py  plan.py  seat_lookup.py  time_utils.py
src/hdu_library_booking/observability/: __init__.py  _error_tracker.py  correlation.py  logging.py  metrics.py
src/hdu_library_booking/resilience/: __init__.py  auth_refresher.py  cancellation.py  circuit_breaker.py  errors.py  retry.py  timeout.py
src/hdu_library_booking/services/: __init__.py  auth.py  booking.py  interfaces.py  notifications.py  plan.py  yaml_plan.py
src/hdu_library_booking/strategies/: __init__.py  fixed.py  random_range.py  weekday.py
tests/: conftest.py  test_api.py  test_auth.py  test_booking_service.py  test_constants.py  test_contract.py  test_models.py  test_room_cache.py  test_smoke.py  test_static_analysis.py  test_strategies.py  test_user_info.py  test_utils.py
tests/e2e/: test_contract.py  test_smoke.py
tests/integration/: test_api.py  test_auth.py  test_booking_service.py
tests/unit/: test_booking_result.py  test_cli.py  test_config.py  test_exceptions.py  test_logger.py  test_metrics.py  test_models.py  test_notification_service.py  test_plan_repository.py  test_plan_service.py  test_resilience.py  test_room_cache.py  test_settings.py  test_strategies.py  test_time.py  test_user_info.py  test_weekday_rotation.py
